--- a/index.html
+++ b/index.html
@@ -1,148 +1,149 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
-  </head>
-  <body>
-    <header class="header">
-      <nav>
-        <a href="#"><span class="accent">Web</span>Studio</a>
-        <ul>
-          <li><a href="#">Студия</a></li>
-          <li><a href="#">Портфолио</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
-    </header>
-    <main>
-      <section class="section_1">
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
-      </section>
-      <section class="section_2">
-        <h2>Особенности</h2>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="section_3">
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
-            <img
-              src="./img/img_1.jpg"
-              alt="Написание_кода"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./img/img_2.jpg"
-              alt="Мобильная_разработка"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./img/img_3.jpg"
-              alt="Дизайнерская_работа"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
-      </section>
-      <section class="section_4">
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img
-              src="./img/Product_Designer.jpg"
-              alt="Продакт_дизайнер"
-              width="270"
-              height="260"
-            />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./img/Frontend_Developer.jpg"
-              alt="Фронтенд_разработчик"
-              width="270"
-              height="260"
-            />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./img/Marketing.jpg"
-              alt="Маркетинг"
-              width="270"
-              height="260"
-            />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./img/UI_Designer.jpg"
-              alt="Дизайнер"
-              width="270"
-              height="260"
-            />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="footer">
-      <a href="#"><span class="accent">Web</span>Studio</a>
-      <address>
-        <ul>
-          <li><a href="https://goo.gl/maps/kPyvkQdRZs6LvkY59" target="_blank"> г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li><a href="maito:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-        </ul>
-      </address>
-    </footer>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="./css/style.css" />
+		<title>Студия</title>
+	</head>
+	<body>
+    
+		<!-- Header -->
+		<header class="header">
+			<nav class="navigation">
+				<a href="./index.html" class="logo">
+					<span class="logo-part">Web</span>
+					Studio
+				</a>
+				<ul class="navigation-list list">
+					<li class="navigation-item">
+						<a href="#" class="navigation-link">Студия</a>
+					</li>
+					<li class="navigation-item">
+						<a href="./portfolio.html" class="navigation-link">Портфолио</a>
+					</li>
+					<li class="navigation-item">
+						<a href="#" class="navigation-link">Контакты</a>
+					</li>
+				</ul>
+			</nav>
+			<ul class="contact-list list">
+				<li>
+					<a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
+				</li>
+				<li>
+					<a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+				</li>
+			</ul>
+		</header>
+		<main class="content">
+			<!-- Hero -->
+			<section class="hero">
+				<h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+				<button type="button" class="hero-button">Заказать услугу</button>
+			</section>
+
+			<!-- Benefits -->
+			<section class="benefits">
+				<h2 class="benefits-title">Преимущества работы с нами</h2>
+				<ul class="benefits-list list">
+					<li class="benefits-item">
+						<h3 class="benefits-item-title">Внимание к деталям</h3>
+						<p class="benefits-item-descr">
+							Идейные соображения, а также начало повседневной работы по формированию позиции.
+						</p>
+					</li>
+					<li class="benefits-item">
+						<h3 class="benefits-item-title">Пунктуальность</h3>
+						<p class="benefits-item-descr">
+							Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+						</p>
+					</li>
+					<li class="benefits-item">
+						<h3 class="benefits-item-title">Планирование</h3>
+						<p class="benefits-item-descr">
+							Равным образом консультация с широким активом в значительной степени обуславливает.
+						</p>
+					</li>
+					<li class="benefits-item">
+						<h3 class="benefits-item-title">Современные технологии</h3>
+						<p class="benefits-item-descr">
+							Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+						</p>
+					</li>
+				</ul>
+			</section>
+
+			<!-- Work -->
+			<section class="work">
+				<h2 class="work-title">Чем мы занимаемся</h2>
+				<ul class="work-list list">
+					<li class="work-item">
+						<img src="./img/img_1.jpg" alt="Кодинг1" width="370" />
+					</li>
+					<li class="work-item">
+						<img src="./img/img_2.jpg" alt="Кодинг2" width="370" />
+					</li>
+					<li class="work-item">
+						<img src="./img/img_3.jpg" alt="Кодинг3" width="370" />
+					</li>
+				</ul>
+			</section>
+
+			<!-- Team -->
+			<section class="team">
+				<h2 class="team-title">Наша команда</h2>
+				<ul class="team-list list">
+					<li class="team-item">
+						<img src="./img/Product_Designer.jpg" alt="Фото Игоря" width="270" />
+						<h3 class="team-item-name">Игорь Демьяненко</h3>
+						<p class="team-item-job">Product Designer</p>
+					</li>
+					<li class="team-item">
+						<img src="./img/Frontend_Developer.jpg" alt="Фото Ольги" width="270" />
+						<h3 class="team-item-name">Ольга Репина</h3>
+						<p class="team-item-job">Frontend Developer</p>
+					</li>
+					<li class="team-item">
+						<img src="./img/Marketing.jpg" alt="Фото Николая" width="270" />
+						<h3 class="team-item-name">Николай Тарасов</h3>
+						<p class="team-item-job">Marketing</p>
+					</li>
+					<li class="team-item">
+						<img src="./img/UI_Designer.jpg" alt="Фото Михаила" width="270" />
+						<h3 class="team-item-name">Михаил Ермаков</h3>
+						<p class="team-item-job">UI Designer</p>
+					</li>
+				</ul>
+			</section>
+		</main>
+
+		<!-- Footer -->
+		<footer class="footer content">
+			<address class="footer-address">
+				<a href="./index.html" class="footer-logo">
+					<span class="footer-logo-part">Web</span>
+					Studio
+				</a>
+				<ul class="footer-list list">
+					<li>
+						<a href="#" class="footer-list-link">г. Киев, пр-т Леси Украинки, 26</a>
+					</li>
+					<li>
+						<a href="mailto:info@devstudio.com" class="footer-list-contact">info@devstudio.com</a>
+					</li>
+					<li>
+						<a href="tel:+380961111111" class="footer-list-contact">+38 096 111 11 11</a>
+					</li>
+				</ul>
+			</address>
+		</footer>
+	</body>
 </html>
